--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.1.0",
+    "antd": "^5.1.2",
     "cross-env": "^7.0.3",
     "firebase": "^9.15.0",
-    "react-intersection-observer": "^9.4.1",
-    "react-map-gl": "^5.2.11",
+    "gsap": "^3.11.4",
     "react-photo-album": "^2.0.0",
-    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
@@ -42,8 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "worker-loader": "^3.0.8"
   }
 }
