--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^9.15.0",
     "gsap": "^3.11.4",
     "react-photo-album": "^2.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
