--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "cross-env": "^7.0.3",
     "firebase": "^9.15.0",
     "gsap": "^3.11.4",
+    "leaflet": "^1.9.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.0",
     "react-photo-album": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.6.1",
